tests/ui/fail/error-and-inner-attrs.rs
use substruct::substruct;

#[substruct(
    #[derive(Debug)]
    B
)]
struct A {
    #[substruct(B)]
    field: u32,
}

fn main() {}
